Change title to 'Minimalist Whiteboard'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebBoard - By Dhairya Shah</title>
+    <title>Minimalist Whiteboard</title>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Dcode9/whiteboard/dfcc6b7600fe1bf56dd763ea9715e9ad5363c227/WebBoard.png?v=2">
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -1602,7 +1602,7 @@
         
         loadFromStorage();
         
-        updateActiveToolButton(currentTool); S
+        updateActiveToolButton(currentTool);
         updateUndoRedoButtons(); // Init button state
 
         // Set initial sizes in UI
